create github pages

--- a/page2.html
+++ b/page2.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="counters4 counters cid-rr86INLI9Z" id="counters4-d">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="counters4 counters cid-rr86INLI9Z" id="counters4-d">
 
     
 
