--- a/page1.html
+++ b/page1.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="features11 cid-rr80zICPp3 mbr-parallax-background" id="features11-a">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="features11 cid-rr80zICPp3 mbr-parallax-background" id="features11-a">
 
     
 
