create github pages

--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="features11 cid-rr80zICPp3 mbr-parallax-background" id="features11-a">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="features11 cid-rr80zICPp3 mbr-parallax-background" id="features11-a">
 
     
 
