--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header12 cid-rqdV5B0W32 mbr-fullscreen mbr-parallax-background" id="header12-3">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header12 cid-rqdV5B0W32 mbr-fullscreen mbr-parallax-background" id="header12-3">
 
     
 
